main sobre mi fot

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -2,10 +2,16 @@
   "name": "Portfolio",
   "firstRun": false,
   "exportConfig": true,
-  "fileConfigs": [],
+  "fileConfigs": [
+    {
+      "path": "jade/index.jade",
+      "configJson": "{\"forceCompile\":false,\"customOutput\":\"index.html\",\"autoCompile\":true,\"compiler-pug\":{\"enabled\":true,\"pretty\":true}}"
+    }
+  ],
   "fileTree": {
     "expandedDirs": [
-      "sass"
+      "sass",
+      "jade"
     ],
     "hideSystemFiles": true,
     "systemFiles": [
